--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About</title>
+    <title>Contact </title>
 </head>
 <body>
-    <h1>This is the about page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum adipisci animi eos quaerat voluptatibus facere in debitis minus excepturi facilis?</p>
+    <h1>This is the contact page!!!</h1>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
